--- a/gb/19/1/28/n11008786.md
+++ b/gb/19/1/28/n11008786.md
@@ -1,10 +1,9 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jbnpp2467/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jbnpp2467/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jbnpp2467/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jbnpp2467/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jbnpp2467/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>妈妈写在儿子21支铅笔上的话 温暖全世界</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/01/child-motivates-600x400.jpg" />
-<h6>为了激励上小学的爱子，美国德州一位妈妈想出了一个很妙的办法。孩子的老师考克斯（Amanda Cox，左）发现后，觉得真是太暖心了。(<a target="_blank" href="https://www.facebook.com/amanda.cox.948" target="_blank" rel="noopener noreferrer">Amanda Cox/Facebook
-</h6>
+
+<h6></h6>
 <hr>
 	<p>【大纪元2019年01月29日讯】（大纪元记者陈洁云编译报导）你会如何帮助孩子拥有积极自信的好心态、保持学习热情？</p>
 <p>为了激励上小学的爱子，美国德州一位妈妈想出了一个很妙的办法。孩子的老师发现后，觉得真是太暖心了。她在脸书分享之后，家长网友们赞不绝口，纷纷起而效仿。</p>
@@ -12,7 +11,6 @@
 <p>一个男孩怯怯问道：妈妈给他准备的那些铅笔，他能留着自己用吗？</p>
 <p>“当然可以了。”考克斯回答。</p>
 <p>过了一会儿，男孩改了主意。他告诉老师：“好吧，我想我还是给你一些，那样同学们也可以用这些铅笔。”</p>
-<figure id="attachment_11008820" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/01/ET2.jpg"><img class="size-large wp-image-11008820" src="https://i.epochtimes.com/assets/uploads/2019/01/ET2-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">(Syda Productions/Shutterstock)</figcaption></figure>
 <p>考克斯没有多想，从他手中接过了一把铅笔。</p>
 <p>当她开始削铅笔时，定睛一看，每支铅笔的底端都写着鼓励的语句。“我这才意识到，我学生的妈妈花时间在他的铅笔上写了这些字。”考克斯在帖文中写道。</p>
 <p>好奇的女老师跟男孩提出，她是否能看看他手上的其它铅笔。</p>
@@ -25,17 +23,14 @@
 <p style="padding-left: 30px;">“追随你的梦想。”</p>
 <p style="padding-left: 30px;">“你将改变这个世界。”</p>
 <p>妈妈的每一句话都鼓舞人心：“这将是很棒的一年。” “你是多么有天赋的孩子。”“你很有创造力。”“你善于解决问题。”“你能行。”“你太棒啦！”……</p>
-<p><center><a src=></a><img width="600" src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/ntdtv/facebook.jpg" ><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D10216602614919223%26set%3Da.1681580600763%26type%3D3&amp;width=500&amp;show_text=true&amp;height=710&amp;appId" width="500" b="710"></a></center>&nbsp;</p>
 <p>考克斯写道：“感谢他的妈妈，他得以了解他的自我价值，也希望与同学分享同样的感受。”</p>
 <p>这位妈妈写这些话或许只花了不到半小时，然而，这个暖心举动却让儿子“在学校开心一整天”。</p>
-<figure id="attachment_11008825" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/01/ET1.jpg"><img class="size-large wp-image-11008825" src="https://i.epochtimes.com/assets/uploads/2019/01/ET1-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">(altanaka/Shutterstock)</figcaption></figure>
 <p>这种提升孩子自尊自信、使其保持好心态的方法，简单得让人想不到。考克斯不禁为这位妈妈竖起大拇指。</p>
 <p>考克斯也建议其他家长和老师们，不妨让孩子知道“有人信任他们并为他们感到骄傲”，即便他们很忙碌，或认为这样做很俗气。</p>
 <p>她最后写道：</p>
 <p style="padding-left: 30px;">“想像一下，当有人提醒孩子们说，他们很重要、有才华和学识、被爱等等时，他们的表情会是什么样。</p>
 <p style="padding-left: 30px;">“请记住，你可能是唯一一个告诉并提醒他们这些事的人，每个孩子都需要知道他们的价值。</p>
 <p style="padding-left: 30px;">“这就是我要当老师的原因。”</p>
-<p><center><a src=></a><img width="600" src="https://raw.githubusercontent.com/jbnpp2467/www/master/t/ntdtv/facebook.jpg" ><h3 align=center>(facebook视频或图片.国内建议下载<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D10212287391041323%26set%3Da.1579603211392%26type%3D3&amp;width=500&amp;show_text=false&amp;height=498&amp;appId" width="500" b="498" data-mce-fragment="1"></a></center>&nbsp;</p>
 <p>考克斯的帖文在网路广传，被分享了25万次，收到了40万个心情。网友们对这位妈妈的可爱主意赞不绝口。</p>
 <p>有的留言称赞： “年度好妈妈。”还有些妈妈决定效仿，以激励自己的孩子：“好棒的主意。我希望这位妈妈不介意我模仿她。”“现在就出去买铅笔！”</p>
 <p>每个孩子都有独特的才能、品质和优势，让孩子拥有强烈的自我价值感，这绝对是家长们应致力的方向之一。</p>
@@ -45,48 +40,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/8/3/10/n2039764.md#1">幼教老师：心灵的感动让眼泪不觉落下</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/11/18/n4576128.md#1">幼教老师不用数到3的秘密 (一)</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/11/25/n4581527.md#1">幼教老师不用数到3的秘密 (二)</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/12/10/n4592611.md#1">幼教老师不用数到3的秘密 (三)</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/12/17/n4597996.md#1">幼教老师不用数到3的秘密 (四)</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/1/9/n4612339.md#1">行为偏差儿童的辅导(二十)</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/1/13/n4615419.md#1">幼教老师不用数到3的秘密 (五)</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/1/27/n4626519.md#1">幼教老师不用数到3的秘密 (六)</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/2/4/n4632990.md#1">幼教老师不用数到3的秘密 (七)</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/3/19/n10230679.md#1">“坏脾气”学生多 女教师尝试新方法 效果出奇好</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/23/n7920493.md#1">写实艺术在当代的勃兴与作品的升值态势</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/4/n10360306.md#1">【艺术趣闻】神圣之林──上课时瞄一瞄教授后面的壁画吧！</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/24/n10804847.md#1">缂织壁毯——黄金时代的黄金艺术</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/21/n10866852.md#1">困厄不怠 信仰坚贞 品名画《但以理在狮穴》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/21/n10866934.md#1">意入宋瓷 渐至佳境 哈佛学者眼中的宋瓷之美</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/30/n10884745.md#1">【文史】被低估的法国古典油画大匠雅凯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/7/n13422320.md#1">雕刻大师的旅程——从苏联被迫害到自由的美国</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/28/n13121292.md#1">热忱不懈 雕版艺术教育家 潘元石</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/12/n12397963.md#1">【大时代华人】一根“牙签”背后的爱情</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/11/n12322329.md#1">发明卡拉OK的日本人 为何不申请专利？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/17/n10645382.md#1" target="_blank">严家伟：杀人越货丧尽天良的“土改”</a></li><li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488843.md#1" target="_blank">34国法轮功学员欧洲集会游行 英议员声援</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/31/n11293194.md#1" target="_blank">【征文】章阁：荒谬的社会发展“五阶段论”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/6/n11571997.md#1" target="_blank">他们为我们的生活带来光明（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/1/21/n11810638.md#1">【思想领袖】迈克尔：时间站在香港这一边</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/19/n11952797.md#1">【现场视频】风吹保护套卷轿车 几百户面临火灾</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11950430.md#1">【现场视频】大风吹袭 京津冀多地起火</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/7/5/n10538877.md#1">睡前一碗安眠汤睡得沉 五款茶饮安抚情绪</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11944768.md#1">疫情升温 该储备什么食品与用品？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947422.md#1">【四维健康】感染中共肺炎有3种反应 哪种最严重？</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/16/n11944883.md#1">【胡乃文开讲】白粥治咳抗感冒！5种神奇食疗方 止咳很实用</a></li>
-<li><a href="https://github.com/jbnpp2467/djy/blob/master/gb/20/3/17/n11947465.md#1">【抗疫家务通】这5类食物 进微波炉可能伤人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jbnpp2467/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/1/28/n11008786.htm">妈妈写在儿子21支铅笔上的话 温暖全世界</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/1/28/n11008786.htm">妈妈写在儿子21支铅笔上的话 温暖全世界</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jbnpp2467/djy/blob/master/gb/19/1/28/n11008786.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jbnpp2467/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jbnpp2467/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jbnpp2467/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jbnpp2467/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/1/28/n11008786.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
